# FinancialAPI

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  README_EN.md  README_PT.md  render.yaml
.github/workflows/: containers.yml  quality.yml
client-web/: Dockerfile  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
client-web/netlify/functions/: keep-backend-awake.ts
client-web/src/: App.tsx  main.tsx
client-web/src/api/: endpointSpec.ts  httpClient.ts
client-web/src/components/: MethodBadge.tsx  TopNav.tsx
docs/: API.md  ARCHITECTURE.md  GUIDE.md  OBSERVABILITY.md
infra/: docker-compose.yml
infra/blackbox/: blackbox.yml
infra/deploy/: Dockerfile.demo
infra/grafana/: dashboard.json  datasources.yml
infra/keycloak/: keycloak-config.yml
infra/prometheus/: alerts.yml  prometheus.yml
infra/rabbitmq/: rabbitmq.conf
scripts/: secret-scan.sh  sql-lint.sh  start-demo-backend.sh
service-api/: .dockerignore
service-api/service-postgresql/: postgresql.conf
service-api/service-python/: Dockerfile  pyproject.toml  requirements.txt
service-api/service-python/scripts/: check_grpc_generated.py  generate_grpc.py
service-api/service-python/src/app/: __init__.py  config.py  logging.py  observability.py  server.py
service-api/service-python/src/app/grpc/: __init__.py  service.py
service-api/service-python/src/app/scoring/: __init__.py  policy.py
service-api/service-python/tests/: test_grpc_service.py  test_policy.py
service-api/service-typescript/: Dockerfile  package-lock.json  package.json  tsconfig.json
(+100 files in other folders)
