[project]
name = "zins-scoring-engine"
version = "1.0.0"
description = "Motor gRPC de decisão de crédito para o FinancialAPI."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/app/grpc/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["src/app/grpc/generated"]

[[tool.mypy.overrides]]
module = ["app.grpc.generated.*", "grpc", "grpc.*", "grpc_health.*"]
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
